room-booking-system/web/src/css/style.css
/* ... */
.content__calendar {
  grid-column: 1;
  grid-row: 1;
  width: 100%;
}
.content__table {
  grid-column: 2;
  grid-row: 1;
  min-width: 40rem;
  width: 100%;
}
.content__form {
  background: #fafafa;
  -webkit-box-shadow: 0px 2px 5px 0px #cecece;
  box-shadow: 0px 2px 5px 0px #cecece;
  grid-column: 3;
  grid-row: 1;
  min-width: 20rem;
  padding: 0 5.8rem;
  width: 100%;
}
input[type=checkbox] {
  -webkit-box-shadow: none;
          box-shadow: none;
  height: 1.6rem;
  width: 1.6rem;
}
input[type=radio] {
  -webkit-box-shadow: none;
          box-shadow: none;
  height: 1.6rem;
  width: 1.6rem;
}
.form__heading--filter {
  margin: 0.8rem 0;
}
.form__input--time {
  border: 0.1em solid #1c1c1c;
  display: inline-block;
  margin: 1rem 0 1rem 1rem;
  width: 12rem;
}
.button {
  background: #ed1c24;
  border: 0.1rem solid #ed1c24;
  color: #fafafa;
  cursor: pointer;
  // font-family: DFKai-SB,"Times New Roman", Times, serif;
  font-size: 1.6rem;
  font-weight: 600;
  margin-right: 2rem;
  min-width: 4rem;
  padding: 1.2rem 3rem;
  text-transform: uppercase;
}
.button:hover {
  background: #fafafa;
  border: 0.1rem solid #ed1c24;
  color: #ed1c24;
}
.button--alternative {
  background: #fafafa;
  border: 0.1rem solid #1c1c1c;
  color: #1c1c1c;
}
.button--alternative:hover {
  background: #1c1c1c;
  border: 0.1rem solid #1c1c1c;
  color: #fafafa;
}
.button--inline {
  display: inline-block;
  font-size: 1.4rem;
  margin: 0.6rem;
  min-width: 1rem;
  padding: 1.2rem 2.6rem;
}
.rdt {
  background: #fafafa;
  -webkit-box-shadow: 0px 2px 5px 0px #cecece;
  box-shadow: 0px 2px 5px 0px #cecece;
  font-size: 1.6rem;
  width: 30rem;
}
.rdt thead th {
  padding: 0.6rem;
}
.rdtPicker {
  background: #fafafa;
  color: #1c1c1c;
  margin: 0 auto;
  padding: 2rem 0;
  width: 28rem;
}
.rdtPicker table {
  margin: 0 auto;
}
.rdtPicker th,
.rdtPicker td {
  height: 2rem;
  padding: 0.6rem;
  text-align: center;
}
.rdtPicker td {
  cursor: pointer;
}
.rdtSwitch {
  // font-family: DFKai-SB,"Times New Roman", Times, serif;
  font-size: 2rem;
  font-weight: 700;
}
.rdtTimeToggle,
.rdtDay,
.rdtHour,
.rdtMinute,
.rdtSecond {
  font-weight: 400;
}
.rdtTimeToggle:hover,
.rdtDay:hover,
.rdtHour:hover,
.rdtMinute:hover,
.rdtSecond:hover {
  background: #1c1c1c;
  color: #fff;
  cursor: pointer;
  font-weight: 500;
}
.rdtOld,
.rdtNew {
  color: #a5a5a5;
}
.rdtToday {
  position: relative;
}
.rdtToday:before {
  border-bottom: 0.7rem solid #ed1c24;
  border-left: 0.7rem solid transparent;
  bottom: 0.4rem;
  content: '';
  display: inline-block;
  position: absolute;
  right: 0.4rem;
}
.rdtActive {
  background: #ed1c24;
  color: #fff;
}
.rdtActive:hover {
  background: #1c1c1c;
  color: #fff;
}
.rdtActive.rdtToday::before {
  border-bottom-color: #fff;
}
th.rdtDisabled,
td.rdtDisabled,
span.rdtDisabled {
  background: none;
  color: #cecece;
  cursor: not-allowed;
}
th.rdtDisabled:hover,
td.rdtDisabled:hover,
span.rdtDisabled:hover {
  background: none;
  color: #cecece;
  cursor: not-allowed;
}
span.rdtOld {
  color: #cecece;
}
th.dow {
  // font-family: DFKai-SB,"Times New Roman", Times, serif;
  font-weight: 600;
  width: 2rem;
}
th.rdtNext,
th.rdtPrev {
  font-size: 2.2rem;
  vertical-align: top;
}
rdtPrev span,
rdtNext span {
  display: block;
  -webkit-touch-callout: none /* iOS Safari */;
  -webkit-user-select: none /* Chrome/Safari/Opera */;
  -moz-user-select: none /* Firefox */;
  -ms-user-select: none /* Internet Explorer/Edge */;
  user-select: none;
}
.rdtPicker thead tr:first-child th {
  cursor: pointer;
}
.rdtPicker thead tr:first-child th:hover {
  background: #f4f4f4;
  color: #1c1c1c;
}
td.rdtMonth,
td.rdtYear {
  cursor: pointer;
  font-size: 1.8rem;
  height: 5rem;
  width: 2rem;
}
td.rdtMonth:hover,
td.rdtYear:hover {
  background: #f4f4f4;
  color: #1c1c1c;
  font-weight: 500;
}
.rdtToday::before {
  border-bottom: 7px solid #ed1c24;
}
.filter {
  background: #fafafa;
  padding: 1.6rem 3.4rem 3rem 3.4rem;
  width: 23rem;
}
.key {
  background: #fafafa;
  padding: 1.6rem 3.4rem 3rem 3.4rem;
  width: 23rem;
}
.key__group {
  width:100%;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.key__description {
  display: inline-block;
  font-size: 1.6rem;
  font-weight: 500;
  padding-left: 2rem;
}
.key__square {
  border: 0.1rem solid #cecece;
  display: inline-block;
  width: 1em;
  height: 1em;
}
.key__square--bu1 {
  background: #70d6ff;
}
.key__square--bu2 {
  background: #ffd670;
}
.key__square--bu3 {
  background: #ef709d;
}
.key__square--bu4 {
  background: #dabfff;
}
.key__square--bu5 {
  background: #85ffc7;
}
.ReactModalPortal .ReactModal__Overlay {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}
.ReactModalPortal .ReactModal__Overlay .ReactModal__Overlay--after-open .overlay {
  opacity: 1;
}
.ReactModalPortal > div {
  background-color: rgba(28,28,28,0.75) !important;
}
.ReactModalPortal .ReactModal__Overlay .ReactModal__Overlay--before-close .overlay {
  opacity: 0;
}
.modal {
  background: #f4f4f4;
  color: #1c1c1c;
  min-width: 50rem;
  padding: 3rem 6rem;
  outline: none;
}
.modal__title {
  margin: 2rem 0;
}
.modal__body {
  font-size: 2rem;
  font-weight: 300;
  margin: 0 0 3rem 0;
  word-break: break-all;
}
.nav {
   // font-family: DFKai-SB,"Times New Roman", Times, serif;
  margin: 0 2rem;
}
.nav__list {
  margin: 0.4rem 1.6rem;
}
.nav__link {
  border-bottom: 2px solid #f4f4f4;
  color: #f4f4f4;
  font-size: 1.8rem;
  font-weight: 600;
  margin-left: 4rem;
  padding: 2rem 0 1rem 0;
}
.nav__link:hover {
  font-weight: 700;
}
/* ... */

